tests/errors/runtime.DivisionByZero.res
0
1
2

══╡ Arithmetic Error ╞════════════════════════════════════════════════════════════════════════════════════ <script> ══

  Division by zero
  
  With value:
      0 :integer

  ┃ File: tests/errors/runtime.DivisionByZero.art
  ┃ Line: 4
  ┃ 
  ┃    2 ║  print 2/2
  ┃    3 ║  print 2/1
  ┃    4 ║► print 2/0
  ┃    5 ║  print 3/1
  ┃    6 ║  print 3/2